# huggingface-experiments

./: README.md  pyproject.toml
.github/workflows/: release.yml
huggingface_experiments/: api.py  commandLine.bash  search.py  testAPI.py  testWrapper.py  test_api.py  test_wrapper.py  tester.py
huggingface_experiments/utils/: args.py
